# realbot

./: .gitignore  Dockerfile  README.md  config.example.yaml  config.py  main.py  pyproject.toml
.github/workflows/: container.yaml
adapters/: matrix.py  tg.py
adapters/db/: anti_fake_users.py  bindings.py  config.py  core.py  fedi.py  lottery.py  models.py  stats.py
adapters/scheduler/: core.py  lottery.py
assets/: LegitimateURLShortener.txt  clearurls.json
core/: actions.py  anti_fake_users.py  bitflip.py  cfg.py  inline.py  ip.py  link.py  lottery.py  mc.py  post_to_fedi.py  promote.py  repeater.py  report_links.py  rikki_hit.py  self_delete.py  simple.py  stats.py  unpin.py  welcome.py
core/middleware/: anti_fake_channel.py  rikki.py  stats.py  unpin.py
helpers/: matrix_login.py  migrate.py  rand.py  songs.py  wbi.py
