[project]
name = "realbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiodns==3.5.0",
    "aiogram==3.21.0",
    "dulwich==0.24.1",
    "mastodon-py==2.0.1",
    "matrix-nio==0.25.2",
    "mcstatus==12.0.2",
    "python-abp==0.2.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
]
